--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -26,15 +26,23 @@
     margin-bottom: .5rem;
 }
 
-.portfolio li .title.github::before{
+.portfolio li h4.title.github::before{
     content: '';
     display: inline-block;
-    width: 1rem;
-    height: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url(/assets/icons/github.svg);
     margin-right: .5rem;
+    transition: .5s;
+}
+
+@media only screen and (max-width: 768px){
+    .portfolio li h4.title.github::before{
+        width: 2rem;
+        height: 2rem;
+    }
 }
 
 
